# smartmet-library-smarttools

./: .cvsignore  .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  Makefile.icc  README.md  SConstruct  smartmet-library-smarttools.spec  smarttools.dox  smarttools.spec
cmake/: Linux.cmake  SmartToolsConfig.cmake  Windows.cmake
include/: FmiColorTypes.h  NFmiAreaMaskInfo.h  NFmiAreaMaskSectionInfo.h  NFmiAviationStationInfoSystem.h  NFmiCalculationChangeFactorArray.h  NFmiCalculationConstantValue.h  NFmiColor.h  NFmiColorSpaces.h  NFmiDataStoringHelpers.h  NFmiDictionaryFunction.h  NFmiDrawParam.h  NFmiDrawParamFactory.h  NFmiDrawParamList.h  NFmiExtraMacroParamData.h  NFmiFastInfoUtils.h  NFmiGridPointCache.h  NFmiGriddingHelperInterface.h  NFmiHarmonizerBookKeepingData.h  NFmiHelpDataInfo.h  NFmiIgnoreStationsData.h  NFmiInfoAreaMaskOccurrance.h  NFmiInfoAreaMaskSoundingIndex.h  NFmiInfoOrganizer.h  NFmiMetEditorCoordinatorMapOptions.h  NFmiMetEditorTypes.h  NFmiModifiableQDatasBookKeeping.h  NFmiMultiLevelMask.h  NFmiOwnerInfo.h  NFmiProducerList.h  NFmiProducerSystem.h  NFmiQueryDataKeeper.h  NFmiRawTempStationInfoSystem.h  NFmiSmartInfo.h  NFmiSmartInfo2.h  NFmiSmartToolCalculation.h  NFmiSmartToolCalculationInfo.h  NFmiSmartToolCalculationSection.h  NFmiSmartToolCalculationSectionInfo.h  NFmiSmartToolInfo.h  NFmiSmartToolIntepreter.h  (+11 more)
smarttools/: CustomColorContour.cpp  CustomColorContour.h  CustomIsoline.cpp  CustomIsoline.h  DataEditing.cpp  DataEditing.h  FmiColorTypes.h  GeneralData.cpp  GeneralData.h  GeneralVisualization.cpp  GeneralVisualization.h  HatchSettings.cpp  HatchSettings.h  NFmiAreaMaskInfo.cpp  NFmiAreaMaskInfo.h  NFmiAreaMaskSectionInfo.cpp  NFmiAreaMaskSectionInfo.h  NFmiAviationStationInfoSystem.cpp  NFmiAviationStationInfoSystem.h  NFmiCalculationConstantValue.cpp  NFmiCalculationConstantValue.h  NFmiColor.cpp  NFmiColor.h  NFmiColorSpaces.cpp  NFmiColorSpaces.h  NFmiCustomColorContour.cpp  NFmiCustomColorContour.h  NFmiCustomIsoline.cpp  NFmiCustomIsoline.h  NFmiDataEditing.cpp  NFmiDataEditing.h  NFmiDataStoringHelpers.cpp  NFmiDataStoringHelpers.h  NFmiDictionaryFunction.cpp  NFmiDictionaryFunction.h  NFmiDrawParam.cpp  NFmiDrawParam.h  NFmiDrawParamFactory.cpp  NFmiDrawParamFactory.h  NFmiDrawParamList.cpp  (+87 more)
source/: NFmiAreaMaskInfo.cpp  NFmiAreaMaskSectionInfo.cpp  NFmiAviationStationInfoSystem.cpp  NFmiCalculationChangeFactorArray.cpp  NFmiCalculationConstantValue.cpp  NFmiColor.cpp  NFmiColorSpaces.cpp  NFmiDataStoringHelpers.cpp  NFmiDictionaryFunction.cpp  NFmiDrawParam.cpp  NFmiDrawParamFactory.cpp  NFmiDrawParamList.cpp  NFmiExtraMacroParamData.cpp  NFmiFastInfoUtils.cpp  NFmiGridPointCache.cpp  NFmiHarmonizerBookKeepingData.cpp  NFmiHelpDataInfo.cpp  NFmiIgnoreStationsData.cpp  NFmiInfoAreaMaskOccurrance.cpp  NFmiInfoOrganizer.cpp  (+28 more)
(+8 files in other folders)
